[package]
name = "PublicVote"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
chrono = "0.4"
secp256k1 = { version = "0.27", features = ["rand-std", "bitcoin_hashes", "serde"] }
tokio={ version = "1.0", features = ["full"] }
bincode = "1.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"]}
rocksdb = "0.21"
serde_json = "1.0"
hex = "0.4.3"
axum = "0.8.1"
validator = { version = "0.16", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.15.1", features = ["v4"] }
